<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_color_wheel"
        android:textSize="26sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/colorPicker"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/color_wheel_desc"
        app:srcCompat="@drawable/color_wheel"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/colorMarker"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/color_marker"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/displayValues"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOnSurfaceVariant"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:autofillHints="none"
        android:ellipsize="none"
        android:hint="@string/color_values"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorPicker" />

    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle_button"
        android:contentDescription="@string/desc_camera_button"
        android:elevation="4dp"
        android:padding="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/camera_icon"
        app:layout_constraintBottom_toTopOf="@id/displayColor"
        app:layout_constraintStart_toEndOf="@id/displayValues"
        app:layout_constraintTop_toTopOf="@id/displayValues" />



    <View
        android:id="@+id/displayColor"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/displayValues"
        app:layout_constraintBottom_toTopOf="@id/btn_guide"/>

    <Button
        android:id="@+id/btn_guide"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/continue_text"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayColor" />


    <Button
        android:id="@+id/btn_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/back_text"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_guide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>